# zadania

./: .NOWY.cpp.swp  .clang-format  .clang-format.txt  .clangd  .gitignore  ;  CF.cpp  CMakeLists.txt  Circumference_of_a_Tree.cpp  DEBMINTEMPLATE.cpp  Dynamic_Diameter.cpp  MINTEMPLATE.cpp  MINTEMPLATE.py  MINTEMPLATE.rs  MINTEMPLATE.s  MODTEMPLATE.cpp  NICE_READ.txt  NOWY.cpp  TAGS  TEMPLATE.cpp  WEBSCRAPING_TEMPLATE.py  a.out  banialuki.cpp  bla.cpp  cdm.sh  cf.sh  clean.sh  cm.sh  cmmerc.sh  cmmod.sh  cmrs.sh  compc.sh  compile_commands.json  comppy.sh  comprs.sh  createc.sh  debug.h  flappy.cpp  formatcpp.sh  install.sh  (+17 more)
AMPPZ/: TEMPLATE.cpp
Advent_of_Code_2023/: Cube_Conundrum.cpp  Cube_Conundrum_part1.cpp  Cube_Conundrum_part2.cpp  Gear_Ratios.cpp  Gear_Ratios_part1.cpp  Trebuchet?!.cpp  Trebuchet!.cpp  a.out
Algos/: .asm-lsp.toml  2D_Prefix_Sum.cpp  2D_Prefix_Sum.s  2D_Prefix_Sum.txt  Aho_Corasick.cpp  Aho_Corasick.test  Aho_Corasick.txt  Avl.cpp  Avl.s  Avl.txt  BFS.cpp  BFS.s  BFS.test  BFS.txt  BST.cpp  BST.s  BST.test  BST.txt  Base_conversion.cpp  Base_conversion.test  Base_conversion.txt  Bellman_Ford_Shortest_Path.cpp  Bellman_Ford_Shortest_Path.s  Bellman_Ford_Shortest_Path.test  Bellman_Ford_Shortest_Path.txt  Binary_Exponentiation.cpp  Binary_Exponentiation.s  Binary_Exponentiation.test  Binary_Lifting.cpp  Binary_Lifting.test  Binary_Lifting.txt  Binary_Search.cpp  Binary_Search.s  Binary_Search.test  Binary_Search.txt  Binomial_Coefficient.cpp  Binomial_Coefficient.s  Binomial_Coefficient.test  Binomial_Theorem.cpp  Binomial_Theorem.s  (+247 more)
AtCoder/: 403_Forbidden.cpp  Disjoint_Set_Union.cpp  Fenwick_Tree.cpp  Floor_Sum.cpp  Forbidden_Difference.cpp  Forbidden_Prefix.cpp  Four_Hidden.cpp  Frog_1.cpp  Frog_2.cpp  Knapsack_1.cpp  Maxflow.cpp  Odd_Position_Sum.cpp  Snake_Numbers.cpp  TEMPLATE.cpp  Vacation.cpp  Welcome_to_AtCoder.cpp  a.out  test.cpp
CSES/: .CF.cpp.swo  .CF.cpp.swp  .gitignore  Apartments.cpp  Array_Description.cpp  Array_Description.txt  Book_Shop.cpp  Building_Roads.cpp  CF.cpp  Coin_Combinations_I.cpp  Coin_Combinations_II.cpp  Counting_Rooms.cpp  Cycle_Finding.cpp  Dice_Combinations.cpp  Distinct_Numbers.cpp  Edit_Distance.cpp  Exponentiation.cpp  Flight_Discount.cpp  Gray_Code.cpp  High_Score.txt  Increasing_Array.cpp  Labyrinth.cpp  Message_Route.cpp  Minimizing_Coins.cpp  Missing_Number.cpp  Palindrome_Reorder.cpp  Permutations.cpp  Range_Xor_Queries.cpp  Removing_Digits.cpp  Removing_Digits.txt  Repetitions.cpp  Shortest_Routes_I.cpp  Static_Range_Minimum_Queries.cpp  Static_Range_Sum_Queries.cpp  Subordinates.cpp  TEMPLATE.cpp  Two_Knights.cpp  Two_Sets.cpp  a.out  bla.cpp
CodeForces/: 1D_Eraser.cpp  ABBC_or_BACB.cpp  A_BIT_of_a_Construction.cpp  Accommodation.cpp  Aleksa_and_Stack.cpp  Alice_and_Books.cpp  (+226 more)
(+1406 files in other folders)
